# pagarme-talks

./: .editorconfig  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  settings.json  tox.ini
demo/: main.py
tests/: test_main.py
